--- a/.gitignore
+++ b/.gitignore
@@ -25,10 +25,16 @@ yarn-debug.log*
 yarn-error.log*
 
 # local env files
-.env.local
+.env
 .env.development.local
 .env.test.local
 .env.production.local
 
 # vercel
 .vercel
+
+# jetBrains
+.idea
+
+# CONFIG
+next.config.js
