--- a/package.json
+++ b/package.json
@@ -20,10 +20,14 @@
     "axios": "^0.21.1",
     "body-parser": "^1.19.0",
     "cloudinary": "^1.25.0",
+    "cookie": "^0.4.0",
+    "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
     "datauri": "^3.0.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "js-cookie": "^2.2.1",
+    "jsonwebtoken": "^8.5.1",
     "multer": "^1.4.2",
     "next": "10.0.7",
     "nodemon": "^2.0.7",
