--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "jsonwebtoken": "^8.5.1",
     "multer": "^1.4.2",
     "next": "10.0.7",
+    "next-images": "^1.7.0",
     "nodemon": "^2.0.7",
     "react": "17.0.1",
     "react-dom": "17.0.1",
