--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@material-ui/core": "^4.11.3",
     "@material-ui/icons": "^4.11.2",
     "@material-ui/styles": "^4.11.3",
+    "@svgr/webpack": "^5.5.0",
     "axios": "^0.21.1",
     "body-parser": "^1.19.0",
     "cloudinary": "^1.25.0",
